--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
 <body>
   <h1>Datenschutzerklärung – Korb NOW</h1>
   <p>
-Datenschutzerklärung / -hinweise
-Vorwort
+<p>Datenschutzerklärung / -hinweise</p>
+<p>Vorwort
 Wir, „Korb-Now“ (nachfolgend: "Korb-Now", "wir" oder "uns") nehmen den Schutz Ihrer personenbezogenen Daten ernst und möchten Sie an dieser Stelle über den Datenschutz bei Korb-Now informieren.
 Uns sind im Rahmen unserer datenschutzrechtlichen Verantwortlichkeit durch das Inkrafttreten der EU-Datenschutz-Grundverordnung (Verordnung (EU) 2016/679; nachfolgend: "DS-GVO") zusätzliche Pflichten auferlegt worden, um den Schutz personenbezogener Daten der von einer Verarbeitung betroffenen Person (wir sprechen Sie als betroffene Person nachfolgend auch mit "Kunde", "Nutzer", "Sie", "Ihnen" oder "Betroffener" an) sicherzustellen.
 Soweit wir entweder alleine oder gemeinsam mit anderen über die Zwecke und Mittel der Datenverarbeitung entscheiden, umfasst dies vor allem die Pflicht, Sie transparent über Art, Umfang, Zweck, Dauer und Rechtsgrundlage der Verarbeitung zu informieren (vgl. Art. 13 und 14 DS-GVO). Mit dieser Erklärung (nachfolgend: "Datenschutzhinweise") informieren wir Sie darüber, in welcher Weise Ihre personenbezogenen Daten von uns verarbeitet werden.
 Unsere Datenschutzhinweise sind modular aufgebaut. Sie bestehen aus einem allgemeinen Teil für jegliche Verarbeitung personenbezogener Daten und Verarbeitungssituationen, die bei jedem Aufruf einer Webseite zum Tragen kommen (A. Allgemeines) und einem besonderen Teil, dessen Inhalt sich jeweils nur auf die dort angegebene Verarbeitungssituation auf unserer Plattform und deren Nutzung ergeben (B. Nutzung der Plattform).
-Um die für Sie relevanten Teile finden zu können, beachten Sie bitte den nachfolgenden Überblick zur Untergliederung der Datenschutzhinweise:
-Teil
+Um die für Sie relevanten Teile finden zu können, beachten Sie bitte den nachfolgenden Überblick zur Untergliederung der Datenschutzhinweise:</p>
+<p>Teil
 Bezeichnung
 Dieser Teil ist für Sie…
 Link
 Teil A
 Allgemeines
-…immer relevant.
+…immer relevant.</p>
 
 Teil B
 Webseite und Social Media Präsenzen
@@ -189,5 +189,6 @@ Für Teil B. Absatz (7) ist zu beachten, dass Sie als Händler mit dem Finanzdie
   </p>
 </body>
 </html>
+
 
 
